updated: integrated backend to frontend
